--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   </div>
  </div>
 </div>  
-        <div id="EQUIPE">
+        <div id="equipe">
 <br><br><br>
         <h1 class="text-center">NOSSA EQUIPE</h1><br>
             <div class="row">
