--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <li class="active"><a href="index.html#">INICIO</a></li>
                 <li><a href="index.html#sobre">SOBRE</a></li>
                 <li><a href="index.html#equipe">EQUIPE</a></li>
-                <li><a href="index.html#blog">BLOG</a></li>
+                <li><a href="blog.html#blog">BLOG</a></li>
                 <li><a href="index.html#contato">CONTATO</a></li>
                 <li><a href="login.html">LOGIN</a></li>
               </ul>
