--- a/login.html
+++ b/login.html
@@ -53,7 +53,7 @@
 <legend>indentifique-se</legend>
 <input class="form-control input-lg" placeholder="GMAIL"><br>
 <input class="form-control input-lg" placeholder="SENHA" type="password"><br>
-<a class="btn btn-danger btn-lg btn-block" href="">ENTRAR</a><br>
+<a class="btn btn-danger btn-lg btn-block" href="">ATUALIZAR</a><br>
 <div class="text-center">
 <a href="#">esqueci minha senha!</a>
 </div>
